# pybench

./: .gitignore
benchmarks/: bench_setattr2.py
benchmarks/bench_pyo3/: Cargo.toml  pyproject.toml
benchmarks/bench_pyo3/benchpyo3/: bench_call_fn.old  bench_fn_call.py  bench_object_call.py  bench_run_py_in_rust.py
benchmarks/bench_pyo3/src/: error.rs  lib.rs  object.rs
benchmarks/oldcode/: bench_setattr.py  bench_setattr2.py
benchmarks/oldcode/bench_serde/: dict.py
