[project]
name = "benchpyo3"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "Binh Vu", email = "binh@toan2.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

requires-python = ">=3.8"

dependencies = [
    'orjson >= 3.9.0, < 4.0.0',
]


[project.optional-dependencies]
dev = [
    'python-dotenv >= 0.19.0, < 0.20.0',
    'pytest >= 7.1.3, < 8.0.0',
    'black >= 22.10.0, < 23.0.0',
]

[tool.maturin]
module-name = "benchpyo3.core"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"